--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -181,8 +181,8 @@
 @media screen and (max-width: 1200px) {
 
     .heading-headline{
-        font-size: 3rem;
-        line-height: 4rem;
+        font-size: 2.5rem;
+        line-height: 3.5rem;
     }
 
     .heading-lead {
